--- a/BankPrediction.ipynb
+++ b/BankPrediction.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1wiU0rTRu6iOrytMxDbwajxd3l3RKH5VM",
-      "authorship_tag": "ABX9TyPLAwK2mLR1ucloLHPqOo0g",
+      "authorship_tag": "ABX9TyOco0Hb7/0rEYkbbaldyBJT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,7 +109,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
+          "height": 422
         },
         "outputId": "0a0a7ecc-5c26-4f98-9d2c-c58383636a8f"
       },
@@ -418,7 +418,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 297
+          "height": 284
         },
         "outputId": "f3fb148b-59c7-435e-d9af-e5c840fb5795"
       },
@@ -571,7 +571,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
+          "height": 438
         },
         "outputId": "652962f1-e436-4c70-ef0c-d099dac0471c"
       },
@@ -878,29 +878,43 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 386
         },
-        "outputId": "6cfc7a46-7e4b-4c69-d4d2-33c6e38464cb"
+        "outputId": "205ad0b1-c3f3-447d-ed8b-ef93ef19978f"
       },
       "source": [
-        "bank_df.columns"
+        "print(bank_df.columns)\n",
+        "print(bank_df.dtypes)"
       ],
-      "execution_count": 173,
+      "execution_count": 182,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['age', 'job', 'marital', 'education', 'default', 'balance', 'housing',\n",
-              "       'loan', 'contact', 'day', 'month', 'duration', 'campaign', 'pdays',\n",
-              "       'previous', 'poutcome', 'y'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 173
+          "output_type": "stream",
+          "text": [
+            "Index(['age', 'job', 'marital', 'education', 'default', 'balance', 'housing',\n",
+            "       'loan', 'contact', 'day', 'month', 'duration', 'campaign', 'pdays',\n",
+            "       'previous', 'poutcome', 'y'],\n",
+            "      dtype='object')\n",
+            "age           int64\n",
+            "job          object\n",
+            "marital      object\n",
+            "education    object\n",
+            "default      object\n",
+            "balance       int64\n",
+            "housing      object\n",
+            "loan         object\n",
+            "contact      object\n",
+            "day           int64\n",
+            "month        object\n",
+            "duration      int64\n",
+            "campaign      int64\n",
+            "pdays         int64\n",
+            "previous      int64\n",
+            "poutcome     object\n",
+            "y            object\n",
+            "dtype: object\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -911,7 +925,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 238
+          "height": 235
         },
         "outputId": "ad471a40-1c97-4239-f4d9-67a3b849bbb7"
       },
@@ -953,7 +967,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 67
         },
         "outputId": "4df8a64b-f896-4af5-ea08-45dae1e74cc2"
       },
@@ -1175,9 +1189,365 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_8KhetqpZcQO",
+        "colab_type": "text"
+      },
+      "source": [
+        "###Ahora vamos a convertir las variables categóricas del *DataFrame* ***bank_df*** a variables numéricas y lo vamos a guardar en el *DataFrame*  ***bank_numdf***."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "7n6S-PRRT9UG",
+        "id": "l1PU3ZbPYu1L",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "bank_numdf = bank_df.copy()\n",
+        "\n",
+        "for columna, serie in bank_numdf.items():\n",
+        "    if not pd.api.types.is_numeric_dtype(serie):\n",
+        "        # Transforma la variable a tipo category\n",
+        "        bank_numdf[columna] = serie.astype('category')\n",
+        "        \n",
+        "# Convertir cada columna categórica a numérica\n",
+        "for columna, serie in bank_numdf.items():\n",
+        "    if pd.api.types.is_categorical_dtype(serie):\n",
+        "        bank_numdf[columna] = serie.cat.codes+1"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I_EgEuskbbjL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 402
+        },
+        "outputId": "8912f89b-20db-4d57-d26e-17af967052f1"
+      },
+      "source": [
+        "bank_numdf"
+      ],
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>age</th>\n",
+              "      <th>job</th>\n",
+              "      <th>marital</th>\n",
+              "      <th>education</th>\n",
+              "      <th>default</th>\n",
+              "      <th>balance</th>\n",
+              "      <th>housing</th>\n",
+              "      <th>loan</th>\n",
+              "      <th>contact</th>\n",
+              "      <th>day</th>\n",
+              "      <th>month</th>\n",
+              "      <th>duration</th>\n",
+              "      <th>campaign</th>\n",
+              "      <th>pdays</th>\n",
+              "      <th>previous</th>\n",
+              "      <th>poutcome</th>\n",
+              "      <th>y</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>58</td>\n",
+              "      <td>5</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2143</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>9</td>\n",
+              "      <td>261</td>\n",
+              "      <td>1</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>44</td>\n",
+              "      <td>10</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>29</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>9</td>\n",
+              "      <td>151</td>\n",
+              "      <td>1</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>33</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>9</td>\n",
+              "      <td>76</td>\n",
+              "      <td>1</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>47</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1506</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>9</td>\n",
+              "      <td>92</td>\n",
+              "      <td>1</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>33</td>\n",
+              "      <td>12</td>\n",
+              "      <td>3</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>5</td>\n",
+              "      <td>9</td>\n",
+              "      <td>198</td>\n",
+              "      <td>1</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>45206</th>\n",
+              "      <td>51</td>\n",
+              "      <td>10</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>825</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>17</td>\n",
+              "      <td>10</td>\n",
+              "      <td>977</td>\n",
+              "      <td>3</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>45207</th>\n",
+              "      <td>71</td>\n",
+              "      <td>6</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1729</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>17</td>\n",
+              "      <td>10</td>\n",
+              "      <td>456</td>\n",
+              "      <td>2</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>45208</th>\n",
+              "      <td>72</td>\n",
+              "      <td>6</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5715</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>17</td>\n",
+              "      <td>10</td>\n",
+              "      <td>1127</td>\n",
+              "      <td>5</td>\n",
+              "      <td>184</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>45209</th>\n",
+              "      <td>57</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>668</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>17</td>\n",
+              "      <td>10</td>\n",
+              "      <td>508</td>\n",
+              "      <td>4</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>45210</th>\n",
+              "      <td>37</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2971</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>17</td>\n",
+              "      <td>10</td>\n",
+              "      <td>361</td>\n",
+              "      <td>2</td>\n",
+              "      <td>188</td>\n",
+              "      <td>11</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>45211 rows × 17 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       age  job  marital  education  ...  pdays  previous  poutcome  y\n",
+              "0       58    5        2          3  ...     -1         0         4  1\n",
+              "1       44   10        3          2  ...     -1         0         4  1\n",
+              "2       33    3        2          2  ...     -1         0         4  1\n",
+              "3       47    2        2          4  ...     -1         0         4  1\n",
+              "4       33   12        3          4  ...     -1         0         4  1\n",
+              "...    ...  ...      ...        ...  ...    ...       ...       ... ..\n",
+              "45206   51   10        2          3  ...     -1         0         4  2\n",
+              "45207   71    6        1          1  ...     -1         0         4  2\n",
+              "45208   72    6        2          2  ...    184         3         3  2\n",
+              "45209   57    2        2          2  ...     -1         0         4  1\n",
+              "45210   37    3        2          2  ...    188        11         2  1\n",
+              "\n",
+              "[45211 rows x 17 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 188
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l2iWFcMdYqAm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from pandas.plotting import scatter_matrix\n",
+        "# scatter plot matrix\n",
+        "#scatter_matrix(bank_numdf.drop(['default','housing','loan','balance','duration'], axis=1),figsize=(15,15))\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TmsF04K6cj6A",
         "colab_type": "code",
         "colab": {}
       },
