--- a/Bank_Marketing_Final.ipynb
+++ b/Bank_Marketing_Final.ipynb
@@ -45,7 +45,7 @@
         "id": "XQbRJKFEQJai"
       },
       "source": [
-        "**Grupo 1**\n",
+        "**Grupo 3**\n",
         "\n",
         "Edwin Contreras\n",
         "\n",
@@ -1428,8 +1428,8 @@
       "metadata": {
         "colab_type": "code",
         "id": "jde5M3uZYtjT",
-        "colab": {},
-        "outputId": "00d21752-9d01-4727-f168-f69b8f43e3a6"
+        "outputId": "00d21752-9d01-4727-f168-f69b8f43e3a6",
+        "colab": {}
       },
       "source": [
         "import warnings\n",
@@ -3058,8 +3058,8 @@
       "metadata": {
         "colab_type": "code",
         "id": "RjVGxr1LQJcT",
-        "colab": {},
-        "outputId": "c288284f-514e-4b25-94ec-23339a373429"
+        "outputId": "c288284f-514e-4b25-94ec-23339a373429",
+        "colab": {}
       },
       "source": [
         "y_pred = mejor_modelo.predict(X_test_scaled)\n",
@@ -3091,8 +3091,8 @@
       "metadata": {
         "colab_type": "code",
         "id": "Y3wx4QwLQJcW",
-        "colab": {},
-        "outputId": "500888a4-2ddb-4a6f-b649-9d5e5e443d8b"
+        "outputId": "500888a4-2ddb-4a6f-b649-9d5e5e443d8b",
+        "colab": {}
       },
       "source": [
         "print_confusion_matrix( confusion_matrix=confusion_matrix(y_test,y_pred), class_names=['No','Si'])"
@@ -3155,8 +3155,8 @@
       "metadata": {
         "colab_type": "code",
         "id": "z2yYKT_MQJcZ",
-        "colab": {},
-        "outputId": "ec787724-52d2-4b40-e69d-a9775638396c"
+        "outputId": "ec787724-52d2-4b40-e69d-a9775638396c",
+        "colab": {}
       },
       "source": [
         "gnb = GaussianNB( )\n",
@@ -3183,8 +3183,8 @@
       "metadata": {
         "colab_type": "code",
         "id": "OFkP256VQJcb",
-        "colab": {},
-        "outputId": "da04035f-f597-4222-ec1b-4c18b99d093c"
+        "outputId": "da04035f-f597-4222-ec1b-4c18b99d093c",
+        "colab": {}
       },
       "source": [
         "gnb.fit(X_train_mm , y_train)\n",
@@ -3210,8 +3210,8 @@
       "metadata": {
         "colab_type": "code",
         "id": "77ZvQmULQJcc",
-        "colab": {},
-        "outputId": "585dbe3b-d9d6-4fc9-d8a3-c6789c8f6496"
+        "outputId": "585dbe3b-d9d6-4fc9-d8a3-c6789c8f6496",
+        "colab": {}
       },
       "source": [
         "y_pred = gnb.predict(X_test_mm)\n",
@@ -3242,8 +3242,8 @@
       "metadata": {
         "colab_type": "code",
         "id": "2nwxwinQQJcf",
-        "colab": {},
-        "outputId": "02080fb5-a8c2-4607-b48a-e2a2b7bc79ed"
+        "outputId": "02080fb5-a8c2-4607-b48a-e2a2b7bc79ed",
+        "colab": {}
       },
       "source": [
         "print_confusion_matrix( confusion_matrix=confusion_matrix(y_test,y_pred), class_names=['No','Si'])"
@@ -3287,8 +3287,8 @@
       "metadata": {
         "colab_type": "code",
         "id": "TL4ItfYRS9yr",
-        "colab": {},
-        "outputId": "0b62523a-2df8-4e69-c81e-de36279a7d74"
+        "outputId": "0b62523a-2df8-4e69-c81e-de36279a7d74",
+        "colab": {}
       },
       "source": [
         "kfold = model_selection.KFold(n_splits=10, random_state=7)\n",
@@ -3323,8 +3323,8 @@
       "metadata": {
         "colab_type": "code",
         "id": "llqlwH1iWhOf",
-        "colab": {},
-        "outputId": "30e28f8c-f96b-40f0-d87c-f883e78c9c25"
+        "outputId": "30e28f8c-f96b-40f0-d87c-f883e78c9c25",
+        "colab": {}
       },
       "source": [
         "confusion_matrix = confusion_matrix(y_test, y_pred)\n",
